[package]
name = "devp2p"
version = "0.3.1"
license = "Apache-2.0"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Wei Tang <hi@that.world>",
]
description = "Ethereum's devp2p protocol implementation in Rust."
repository = "https://github.com/rust-ethereum/devp2p"
edition = "2018"

[dependencies]
aes = "0.5"
aes-ctr = "0.5"
arrayref = "0.3"
arrayvec = "0.5"
async-trait = "0.1"
block-modes = "0.6"
byteorder = "1"
bytes = "0.5"
digest = "0.9"
discv5 = { git = "https://github.com/sigp/discv5" }
enr = "0.1"
enum-primitive-derive = "0.2"
ethereum = { git = "https://github.com/rust-blockchain/ethereum" }
ethereum-forkid = "*"
ethereum-types = "0.9"
futures = "0.3"
generic-array = "0.14"
hmac = "0.9"
libsecp256k1 = { git = "https://github.com/paritytech/libsecp256k1" }
log = "0.4"
maplit = "1"
num-traits = "0.2"
once_cell = "1"
parking_lot = "0.11"
plain_hasher = "0.2"
rand = "0.7"
rlp = { git = "https://github.com/paritytech/parity-common" }
rlp-derive = { git = "https://github.com/paritytech/parity-common" }
sha2 = "0.9"
sha3 = "0.9"
snap = "1"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
uint = "0.8"

[dev-dependencies]
env_logger = "0.7"
hex-literal = "0.3"
sha3 = "0.9"
url = "2"

[patch.crates-io]
rlp = { git = "https://github.com/paritytech/parity-common" }
rlp-derive = { git = "https://github.com/paritytech/parity-common" }
