[package]
name = "devp2p"
version = "0.3.1"
license = "Apache-2.0"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Wei Tang <hi@that.world>",
]
description = "Ethereum's devp2p protocol suite implementation in Rust."
repository = "https://github.com/rust-ethereum/devp2p"
edition = "2018"

[dependencies]
aes = "0.5"
aes-ctr = "0.5"
arrayref = "0.3"
arrayvec = "0.5"
async-trait = "0.1"
block-modes = "0.6"
byteorder = "1"
bytes = "0.5"
derivative = "2"
derive_more = "0.99"
digest = "0.9"
discv5 = { git = "https://github.com/sigp/discv5", optional = true }
dnsdisc = { git = "https://github.com/rust-ethereum/dnsdisc", optional = true }
ecdsa = "0.8"
enr = { version = "0.3", default-features = false, features = ["k256"] }
enum-primitive-derive = "0.2"
ethereum = { git = "https://github.com/rust-blockchain/ethereum", default-features = false, features = ["std"] }
ethereum-forkid = "*"
ethereum-types = "0.9"
futures = "0.3"
generic-array = "0.14"
hex = "0.4"
hmac = "0.9"
k256 = { version = "0.5", features = ["ecdh", "ecdsa"] }
maplit = "1"
num-traits = "0.2"
once_cell = "1"
parking_lot = "0.11"
plain_hasher = "0.2"
rand = "0.7"
rlp = "0.4.6"
rlp-derive = "0.1"
sha2 = "0.9"
sha3 = "0.9"
signature = { version = "1", features = ["std"] }
snap = "1"
task-group = { git = "https://github.com/vorot93/task-group" }
tokio = { version = "0.2", features = ["stream", "sync", "time"] }
tokio-util = { version = "0.3", features = ["codec"] }
tracing = "0.1"
tracing-futures = "0.2"
uint = "0.8"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
env_logger = "0.7"
hex-literal = "0.3"
sha3 = "0.9"
tokio = { version = "0.2", features = ["full"] }
tracing-subscriber = "0.2"
trust-dns-resolver = "0.19"
url = "2"

[[example]]
name = "sentry"
required-features = ["dnsdisc", "dnsdisc/trust-dns"]
