[package]
name = "dpt"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Ethereum's Distributed Peer Table implementation in Rust."
repository = "https://github.com/sorpaas/devp2p-rs"

[dependencies]
devp2p-secp256k1 = "0.5"
sha3 = "0.6"
etcommon-bigint = "0.1"
etcommon-crypto = "0.1"
etcommon-util = "0.1"
etcommon-rlp = "0.1"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
time = "0.1"