[package]
name = "dpt"
version = "0.2.6"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Ethereum's Distributed Peer Table implementation in Rust."
repository = "https://github.com/sorpaas/rust-devp2p"
edition = "2018"

[dependencies]
secp256k1-plus = "0.5"
rand = "0.3.12"
sha3 = "0.6"
etcommon-bigint = "0.2"
etcommon-hexutil = "0.2"
etcommon-rlp = "0.2"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-timer-plus = "0.1"
time = "0.1"
log = "0.3"
url = "1.5.1"

[dev-dependencies]
env_logger = "0.3"