[package]
name = "rlpx"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "RLPx peer-to-peer protocol implementation in Rust."
repository = "https://github.com/sorpaas/rust-devp2p"
edition = "2018"

[dependencies]
byteorder = "1"
bytes = "0.4"
etcommon-bigint = "0.2"
etcommon-hexutil = "0.2"
etcommon-rlp = "0.2"
futures = "0.1"
log = "0.3"
mio = "0.6"
rand = "0.3.12"
rust-crypto = "0.2"
secp256k1-plus = "0.5"
sha2 = "0.6"
sha3 = "0.6"
tokio-codec = "0.1"
tokio-core = "0.1"

[dev-dependencies]
env_logger = "0.3"
